pythonBookSite/frontend/static/frontend/css/style.css
.article-list {
    columns: 3;
}

.text-20rem {
    font-size: 2rem;
}

.text-17rem {
    font-size: 1.7rem;
}

.text-15rem {
    font-size: 1.5rem;
}

.article-content {
    font-size: 1.05rem;
    max-width: 800px;
}

.article-content p code {
    font-family: Consolas,Lucida Console,Menlo,Monaco,monospace;
    padding: 2px 4px;
    background: #f5f2f0;
    border-radius: 2px;
    color: #333;
}


.article-content pre {
    padding-left: 20px;
    margin-bottom: 1.1rem;
    background-color: #e9e6e4;
}

.article-content pre code {
    padding-top: 1.1rem;
    padding-bottom: 1.1rem;
    background-color: #f5f2f0;
}

.article-content h1 {
    margin-bottom: 1.8rem;
}

.article-content h2 {
    margin-bottom: 1.7rem;
    margin-top: 2.1rem;
    font-size: 1.8rem;
    font-weight: 500;
}

.article-content h3 {
    margin-bottom: 1.5rem;
    margin-top: 2rem;
    font-size: 1.5rem;
    font-weight: 500;
}

.article-content p, ul, div, pre {
    margin-bottom: 1.5rem;
}

.article-content li {
    margin-bottom: 1.3rem;
} 

